# clap-validator

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: util.rs
src/plugin/: ext.rs  host.rs  library.rs  preset_discovery.rs
src/plugin/ext/: audio_ports.rs  note_ports.rs  params.rs  preset_load.rs  state.rs  state_context.rs
src/plugin/instance/: process.rs
src/plugin/preset_discovery/: indexer.rs  metadata_receiver.rs  provider.rs
src/tests/: plugin.rs  rng.rs
src/tests/plugin/: extensions.rs
src/tests/plugin_library/: preset_discovery.rs
