[package]
name = "clap-validator"
version = "0.3.5"
edition = "2024"
license = "MIT"

description = "A validator and automatic test suite for CLAP plugins (lxndrbe fork with DAW lifecycle tests)"
readme = "README.md"
repository = "https://github.com/LX-Audiolabs/clap-validator"

[dependencies]
anyhow = "1.0.58"
chrono = { version = "0.4.23", features = ["serde"] }
# All the claps!
clap = { version = "4.1.8", features = ["derive", "wrap_help"] }
# CLAP 1.2.3 (micahrj/clap-sys master; crates.io 0.5.0 is still 1.2.2).
# free-audio/clap is at 1.2.10 — clap-sys not yet ported past 1.2.3.
clap-sys = { git = "https://github.com/micahrj/clap-sys", rev = "429e6a6663f2865b0c0b7dbc4971f2e189dc4d8c" }
colored = "3.1.1"
crossbeam = "0.8.1"
libloading = "0.9.0"
log = "0.4"
log-panics = "2.0"
midi-consts = "0.1.0"
parking_lot = "0.12.1"
rand = "0.10.1"
rand_pcg = "0.10.2"
rayon = "1.6.1"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.20.0"
simplelog = "0.12"
strum = "0.28.0"
strum_macros = "0.28.0"
tempfile = "3.3"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
walkdir = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
